src/test/deca/context/valid/class/calls/field_superclass.deca
// Description:
//    Utilisation d'un champ de la superclasse
//
// Resultats:
//    Cast correct

class A {
	int a;
}

class B extends A {}

{
	B b;
	int a;
	b.a = a;
}

