src/test/deca/context/invalid/assign_float_in_int.deca
// Description:
//    Tentative d'affection d'un float à un int
//
// Resultats:
//    Bad assignement
// 

{
    int a;
    float b;
    a = b;
}
